<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carlisle.ben.rockpaperscissors.MainActivity"
    android:background="#44ddff">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/output"
        android:text="@string/rps"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:layout_marginBottom="32dp"
        android:id="@+id/buttons">

        <Button
            android:layout_height="64dp"
            android:layout_width="wrap_content"
            android:id="@+id/rock"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/rock"
            style="?android:attr/searchButtonText"
            android:onClick="userMove"/>

        <Button
            android:layout_height="64dp"
            android:layout_width="wrap_content"
            android:id="@+id/paper"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/paper"
            style="?android:attr/searchButtonText"
            android:onClick="userMove"/>

            <Button
            android:layout_height="64dp"
            android:layout_width="wrap_content"
            android:id="@+id/scissors"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/scissors"
            style="?android:attr/searchButtonText"
            android:onClick="userMove"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/buttons"
        android:layout_below="@id/output"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:background="#ffcc22"
            android:padding="8dp"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wins"
                    android:textColor="#333333"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ties"
                    android:gravity="center"
                    android:textColor="#333333"
                    android:textSize="30sp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Losses"
                    android:gravity="center"
                    android:textColor="#333333"
                    android:textSize="30sp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/wins"
                    android:textColor="#aa0000"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ties"
                    android:gravity="center"
                    android:textColor="#aa0000"
                    android:textSize="30sp"
                    android:text="@string/zero"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/losses"
                    android:gravity="center"
                    android:textColor="#aa0000"
                    android:textSize="30sp"
                    android:text="@string/zero"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/percentages"
            android:background="#ffcc22"
            android:padding="8dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="#000000"
                android:text="@string/choice"
                android:textAlignment="center"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textSize="24sp"
                        android:id="@+id/rPer"
                        android:text="@string/rocks"
                        android:textColor="#aa0000"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/papers"
                        android:layout_marginStart="16dp"
                        android:id="@+id/pPer"
                        android:textColor="#aa0000"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/scissor"
                        android:layout_marginStart="16dp"
                        android:id="@+id/sPer"
                        android:textColor="#aa0000"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/confidence"
                        android:text="@string/con"
                        android:textColor="#aa0000"
                        android:textAlignment="center"
                        android:textSize="24sp"/>
                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:onClick="clear"
                        android:textColor="#aa0000"
                        android:text="Clear"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
